# ncnn-mingw64

./: CMakeLists.txt  README.md  cmake.sh
